add: functions and element item for recyclerview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">MercadoLibre Candidate</string>
+    <string name="app_name" translatable="false">MercadoLibre Candidate</string>
+    <string name="money_amount" translatable="false">%s %s</string>
+    <string name="no_items">Your search did not retrieve any results</string>
+    <string name="no_items_error">No network available, please try again later</string>
 </resources>
