add: clean code

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="no_items">Tu búsqueda no arrojó ningún resultado</string>
     <string name="no_items_error">No logramos conectarnos, por favor intenta más tarde</string>
+    <string name="condition">Condición</string>
 </resources>
