--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
     <string name="app_name" translatable="false">MercadoLibre Candidate</string>
     <string name="money_amount" translatable="false">%s %s</string>
-    <string name="no_items">Your search did not retrieve any results</string>
+    <string name="no_items">It seems like there are no items here</string>
+    <string name="try_again">Try again</string>
+    <string name="no_network">It seems that there is no internet</string>
     <string name="no_items_error">No network available, please try again later</string>
     <string name="condition">Condition</string>
+    <string name="search_results">Results for: %s</string>
     <string name="item_no_available">This article is not available</string>
     <string name="search_hint">Search in Mercado Libre</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="interesting_items">Here we have some interesting items for you!</string>
 </resources>
